changes for end point versioning