@@ -4,19 +4,9 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
-import java.util.stream.Collectors;
-
 import org.springframework.data.domain.Page;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.PutMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 import com.montage.common.dto.ApiResponse;
 import com.montage.common.dto.BulkUploadResponse;
@@ -28,46 +18,52 @@ import com.montage.device.entity.Device;
 import com.montage.device.mapper.DeviceMapper;
 import com.montage.device.service.impl.DeviceServiceImpl;
 
-import jakarta.validation.ConstraintViolation;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
 @Slf4j
 @RestController
-@RequestMapping("/devices")
+@RequestMapping("/api/devices")
 @RequiredArgsConstructor
+@Tag(name = "Device Management", description = "APIs for managing devices")
 public class DeviceController {
 
     private final DeviceServiceImpl deviceService;
     private final DeviceMapper deviceMapper;
     private final jakarta.validation.Validator validator;
 
-    @PostMapping("/search")
-    public ResponseEntity<ApiResponse<Page<DeviceResponse>>> search(@RequestBody SearchRequest searchRequest) {
+    @Operation(summary = "Search devices")
+    @PostMapping("v1/device/search")
+    public ResponseEntity<ApiResponse<Page<DeviceResponse>>> searchDevices(@RequestBody SearchRequest searchRequest) {
         log.info("Searching devices with criteria: {}", searchRequest);
         Page<Device> devices = deviceService.search(searchRequest);
         Page<DeviceResponse> response = devices.map(deviceMapper::toResponse);
         return ResponseEntity.ok(ApiResponse.success(response));
     }
 
-    @GetMapping("/{id}")
-    public ResponseEntity<ApiResponse<DeviceResponse>> findById(@PathVariable Integer id) {
+    @Operation(summary = "Get device by ID")
+    @GetMapping("v1/device/{id}")
+    public ResponseEntity<ApiResponse<DeviceResponse>> getDevice(@PathVariable Integer id) {
         log.info("Finding device by id: {}", id);
         Device device = deviceService.findById(id);
         return ResponseEntity.ok(ApiResponse.success(deviceMapper.toResponse(device)));
     }
 
-    @PostMapping
-    public ResponseEntity<ApiResponse<DeviceResponse>> create(@Valid @RequestBody DeviceRequest request) {
+    @Operation(summary = "Create new device")
+    @PostMapping("v1/device")
+    public ResponseEntity<ApiResponse<DeviceResponse>> createDevice(@Valid @RequestBody DeviceRequest request) {
         log.info("Creating new device: {}", request);
         Device device = deviceMapper.toEntity(request);
         Device savedDevice = deviceService.create(device);
         return ResponseEntity.ok(ApiResponse.success(deviceMapper.toResponse(savedDevice)));
     }
 
-    @PutMapping("/{id}")
-    public ResponseEntity<ApiResponse<DeviceResponse>> update(
+    @Operation(summary = "Update existing device")
+    @PutMapping("v1/device/{id}")
+    public ResponseEntity<ApiResponse<DeviceResponse>> updateDevice(
             @PathVariable Integer id, 
             @Valid @RequestBody DeviceRequest request) {
         log.info("Updating device with id {}: {}", id, request);
@@ -76,32 +72,26 @@ public class DeviceController {
         return ResponseEntity.ok(ApiResponse.success(deviceMapper.toResponse(updatedDevice)));
     }
 
-    @DeleteMapping("/{id}")
-    public ResponseEntity<Void> delete(@PathVariable Integer id) {
+    @Operation(summary = "Delete device")
+    @DeleteMapping("v1/device/{id}")
+    public ResponseEntity<Void> deleteDevice(@PathVariable Integer id) {
         log.info("Deleting device with id: {}", id);
         deviceService.delete(id);
         return ResponseEntity.noContent().build();
     }
 
-    @PostMapping("/bulk-upload")
-    public ResponseEntity<ApiResponse<BulkUploadResponse<String>>> bulkUpload(
+    @Operation(summary = "Bulk upload devices")
+    @PostMapping("v1/device/bulk-upload")
+    public ResponseEntity<ApiResponse<BulkUploadResponse<String>>> bulkUploadDevices(
             @RequestBody List<DeviceRequest> requests) {
         log.info("Processing bulk upload for {} devices", requests.size());
         
         Map<String, String> failedRecords = new HashMap<>();
         List<Device> validDevices = new ArrayList<>();
         
-       //  Validate each request and collect errors
+        // Validate each request and collect errors
         for (DeviceRequest request : requests) {
             try {
-             //   Set<ConstraintViolation<DeviceRequest>> violations = validator.validate(request);
-//                if (!violations.isEmpty()) {
-//                    String errors = violations.stream()
-//                        .map(ConstraintViolation::getMessage)
-//                        .collect(Collectors.joining("; "));
-//                    failedRecords.put(request.getImei() != null ? request.getImei() : "Unknown", errors);
-//                    continue;
-//                }
                 validDevices.add(deviceMapper.toEntity(request));
             } catch (Exception e) {
                 failedRecords.put(request.getImei() != null ? request.getImei() : "Unknown", e.getMessage());
@@ -111,17 +101,12 @@ public class DeviceController {
         // Process valid devices
         DeviceUploadResult result = deviceService.bulkUpload(validDevices);
         
-        // Add service-level validation failures to the failed records
-//        result.getFailedDevices().forEach((device, errorMessage) -> 
-//            failedRecords.put(device.getImei() != null ? device.getImei() : "Unknown", errorMessage)
-//        );
-        
         BulkUploadResponse<String> response = BulkUploadResponse.<String>builder()
             .successCount(result.getSuccessfulDevices().size())
             .failureCount(result.getFailedDevices().size())
             .successfulRecords(result.getSuccessfulDevices().stream()
                 .map(Device::getImei)
-                .collect(Collectors.toList()))
+                .toList())
             .failedRecords(result.getFailedDevices())
             .build();
             
